[package]
name = "raffle"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
outbe-utils = { workspace = true }

tribute = { workspace = true}
nod = { workspace = true}
vector = { workspace = true}
token-allocator = { workspace = true}
price-oracle = { workspace = true}


[dev-dependencies]
cw-multi-test = { workspace = true }
